17753
```scala
scala> class ann1(x: Int) extends scala.annotation.StaticAnnotation
defined class ann1

scala> class C @ann1(2) ()
defined class C

scala> class ann2(x: Int)(y: Int) extends scala.annotation.StaticAnnotation
defined class ann2

scala> class C @ann2(2)(3) ()
<console>:1: error: identifier expected but integer literal found.
       class C @ann2(2)(3) ()
                        ^
```
